@@ -1,8 +1,8 @@
 version 0.10.4
 ==============
 
-- make 'nil' work for 'add' and 'len'
 - improve GC-unsafety warnings
+- make 'nil' work for 'add' and 'len'
 - get rid of 'mget'; aka priority of 'var' needs to be 'var{lvalue}'
 
 
